# GerenciadorSenhas

./: .gitignore  main.py  pyproject.toml
model/: password.py
templates/: template.py
views/: password_views.py
