[tool.poetry]
name = "gerenciadorsenhas"
version = "0.1.0"
description = ""
authors = ["jonasr1 <yatosama924@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^43.0.3"
inquirerpy = "^0.3.4"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
